# VPR-data_landing

./: README.md  pyproject.toml  requirements.txt  requirements_dev.txt
.github/workflows/: data_landing_job.yml
config/: config.yml
notebooks/: VRP_ETL.ipynb
src/: functions.py  main.py  schemas.py  spark_session.py
